--- a/PageTurnAnimation/src/main/AndroidManifest.xml
+++ b/PageTurnAnimation/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.alms.animator">
+          package="com.owl.page.turn">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -11,25 +11,24 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name="com.owl.turn.PageTurningActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
+                <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".flipOver.PageTurningActivity"
+            android:name="com.owl.turn.PageTurningBTest"
             android:label="@string/app_name"/>
         <activity
-            android:name=".flipOver.PageTurningBTest"
+            android:name="com.owl.turn.PageTurningSimpleTest"
             android:label="@string/app_name"/>
         <activity
-            android:name=".flipOver.PageTurningSimpleTest"
-            android:label="@string/app_name"/>
-        <activity
-            android:name=".flipOver.PageTurningCompleteTest"
+            android:name="com.owl.turn.PageTurningCompleteTest"
             android:label="@string/app_name"/>
     </application>
 
